--- a/src/html/es5/requireJS_demo.html
+++ b/src/html/es5/requireJS_demo.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="../js/lib/require.js" data-main="../js/es5/requireJS_demo.js"></script>
+<script src="../../js/lib/require.js" data-main="../../js/es5/requireJS_demo.js"></script>
 </body>
 </html>
